# merge-sorted-files

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test_build_release.yml
merge_sorted_files/: iterator.py  main.py  reader.py
tests/: test_file_reader.py  test_iterator.py  test_main.py
